--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         ใช้ปุ่มลูกศรเพื่อเคลื่อนที่, Z เพื่อ A, X เพื่อ B, Enter เพื่อ Start
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsnes/1.2.1/jsnes.min.js"></script>
+    <script src="https://unpkg.com/jsnes/dist/jsnes.min.js"></script>
     <script>
         // โค้ด JavaScript ที่จะควบคุม Emulator
         var nes;
@@ -88,4 +88,5 @@
         };
     </script>
 </body>
+
 </html>
